[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "timewarp"
description = "Return to days begone."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = []
authors = [
  { name = "Sebastian Gottfried", email = "sebastian.gottfried@dlr.de" },
]
dependencies = [
    "textual",
]


[project.optional-dependencies]
dev = [
    'check-manifest',
    'docutils<0.19',
    'pylint',
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'textual-dev',
    'wheel',
]

[project.scripts]
timewarp = "timewarp.__main__:main"



[tool.pylint.MASTER]
max-line-length = 120
recursive = true
ignore = ["venv", "build", "dist"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "fixme",
]
good-names-rgxs = "^[_a-z][_a-z0-9]?$"


[tool.distutils.bdist_wheel]
universal = true

